--- a/User Guide.ipynb
+++ b/User Guide.ipynb
@@ -7,7 +7,7 @@
     "# User guide for Hypy\n",
     "## and python in general\n",
     "\n",
-    "In this user guide, you'll learn how to use Hypy in the notebook Jupyter, but also some basic functions of the language Python. It will first show you how to install the notebook and then work with hypy. For more details about the project, they are available here : https://github.com/Pianarol/hypy (In French, but with some illustrations).\n",
+    "In this user guide, you'll learn how to use Hypy in the notebook Jupyter, but also some basic functions of the language Python. It will first show you how to install the notebook and then work with hypy. More details about the project are available here : https://github.com/Pianarol/hypy (In French, but with some illustrations).\n",
     "\n",
     "The goal is not to become an expert in Python, but to learn fundamental tools to go along with the use of Hypy. \n",
     "\n",
